--- a/index.html
+++ b/index.html
@@ -125,7 +125,88 @@
                 </div>
             </div>
         </header>
-        <main style="height: 15000px"></main>
+        <main style="height: 15000px">
+            <!-- Hero -->
+            <section class="hero">
+                <div class="container">
+                    <div class="hero__inner">
+                        <section class="hero__content">
+                            <p class="hero__title">Digital Smart Wallet</p>
+                            <h1 class="hero__heading">
+                                Digital
+                                <span class="hero__heading-highlight"
+                                    >Payment</span
+                                >
+                                For Everyone.
+                            </h1>
+                            <p class="hero__desc section__desc">
+                                We bring together eveything that’s required to
+                                build websites and apps that accept payments and
+                                send payouts globally. We are the best platform.
+                            </p>
+                            <form action="" class="subscribe-form">
+                                <input
+                                    type="email"
+                                    id=""
+                                    name=""
+                                    placeholder="Your email address"
+                                    class="subscribe-form__input"
+                                />
+                                <button
+                                    type="submit"
+                                    class="subscribe-form__submit"
+                                >
+                                    Get Started
+                                </button>
+                            </form>
+                            <p class="hero__private">
+                                *We’ll respect the inbox and never share your
+                                email.
+                            </p>
+                        </section>
+                        <div class="hero__media">
+                            <figure class="hero__img-wrap">
+                                <img
+                                    src="./assets/img/mobile-screen.png"
+                                    alt=""
+                                    class="hero__img"
+                                />
+                            </figure>
+                            <div class="hero__desposite">
+                                <img
+                                    src="./assets/icon/hero-decor-1.svg"
+                                    alt=""
+                                />
+                                <div class="hero__desposite-row">
+                                    <span class="hero__desposite-label"
+                                        >Deposite</span
+                                    >
+                                    <span class="desposite-price">$32000</span>
+                                </div>
+                            </div>
+                            <div class="hero__secured">
+                                <img
+                                    src="./assets/icon/hero-decor-2.svg"
+                                    alt=""
+                                />
+                                <div class="hero__secured-info">
+                                    <p class="hero__secured-price">$1.310</p>
+                                    <p class="hero__secured-heading">
+                                        SECURED FUNDS
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="hero__interest">
+                                <span class="hero__interest-percent">0%</span>
+                                <span class="hero__interest-label"
+                                    >Interest</span
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <script>
             document.addEventListener("scroll", function () {
                 var header = document.querySelector(".header");
