--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
             rel="stylesheet"
         />
         <!-- Reset css -->
@@ -130,6 +130,7 @@
             <section class="hero">
                 <div class="container">
                     <div class="hero__inner">
+                        <!-- Hero content -->
                         <section class="hero__content">
                             <p class="hero__title">Digital Smart Wallet</p>
                             <h1 class="hero__heading">
@@ -164,6 +165,7 @@
                                 email.
                             </p>
                         </section>
+                        <!-- Hero media -->
                         <div class="hero__media">
                             <figure class="hero__img-wrap">
                                 <img
@@ -203,6 +205,101 @@
                                 >
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Work -->
+            <section class="work">
+                <div class="container">
+                    <div class="work__inner">
+                        <!-- Work media -->
+                        <div class="work__media">
+                            <figure class="work__img-wrap">
+                                <img
+                                    src="./assets/img/work-img.png"
+                                    alt=""
+                                    class="work__img"
+                                />
+
+                                <div class="work__square">
+                                    <div class="work__square-small">
+                                        <img
+                                            src="./assets/icon/work-decor-1.svg"
+                                            alt=""
+                                            class="work-decor-img"
+                                        />
+                                    </div>
+                                </div>
+                                <div class="work__check">
+                                    <div class="work__check-square">
+                                        <div class="work__check-circle">
+                                            <svg
+                                                width="12"
+                                                height="8"
+                                                viewBox="0 0 12 8"
+                                                fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                            >
+                                                <path
+                                                    d="M1 4L4.5 7.5L11 1"
+                                                    stroke="#4AB5E3"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="work__check-info">
+                                        <h3 class="work__check-title">
+                                            Congratulations
+                                        </h3>
+                                        <p class="work__check-desc">
+                                            Your account activated
+                                        </p>
+                                    </div>
+                                </div>
+                            </figure>
+                        </div>
+                        <!-- work content -->
+                        <section class="work__content">
+                            <p class="section__title">Digital Smart Wallet</p>
+                            <h2 class="work__heading section__heading">
+                                How It Works
+                            </h2>
+                            <ul class="work__list">
+                                <li class="work-item">
+                                    <h3 class="work-item__heading">
+                                        1. Open a High Interest Checking account
+                                    </h3>
+                                    <p class="work-item__desc">
+                                        Fund your bank account with a minimum
+                                        balance of $100. Enroll in 3 minutes or
+                                        less!
+                                    </p>
+                                </li>
+                                <li class="work-item">
+                                    <h3 class="work-item__heading">
+                                        2. 10 point-of-sale transactions each
+                                        Month that are at least $10 each.
+                                    </h3>
+                                    <p class="work-item__desc">
+                                        Be sure to use your rewards checking
+                                        account as often as possible in order to
+                                        accue APYI
+                                    </p>
+                                </li>
+                                <li class="work-item">
+                                    <h3 class="work-item__heading">
+                                        3. Receive up to 5.50% APY
+                                    </h3>
+                                    <p class="work-item__desc">
+                                        The APY you earn will be based on your
+                                        account balance and satisfying the
+                                        transaction requirement.
+                                    </p>
+                                </li>
+                            </ul>
+                        </section>
                     </div>
                 </div>
             </section>
