--- a/index.html
+++ b/index.html
@@ -303,6 +303,83 @@
                     </div>
                 </div>
             </section>
+            <!-- Payment -->
+            <section class="payment">
+                <div class="container">
+                    <div class="payment__row">
+                        <section class="payment__content">
+                            <p class="section__title">Digital Smart Wallet</p>
+                            <h2 class="section__heading">
+                                One Card For All Your Payments
+                            </h2>
+                            <p class="section__desc payment__desc">
+                                We bring together eveything that’s required to
+                                build websites and apps that accept payments and
+                                send payouts globally. We are the best platform.
+                            </p>
+                            <ul class="payment__list">
+                                <li class="payment__item">Global Payments</li>
+                                <li class="payment__item">
+                                    One-Click Purchase
+                                </li>
+                                <li class="payment__item">Friendly Price</li>
+                            </ul>
+                            <button class="payment__cta btn">
+                                Get Started
+                            </button>
+                        </section>
+                        <figure class="payment__img-wrap">
+                            <img
+                                src="./assets/img/card-payment.png"
+                                alt=""
+                                class="payment__img"
+                            />
+                            <!-- Send money -->
+                            <div class="payment__send">
+                                <div class="payment__send-left">
+                                    <img
+                                        src="./assets/icon/paper-plane.svg"
+                                        alt=""
+                                        class="payment__send-img"
+                                    />
+                                </div>
+
+                                <div class="payment__send-info">
+                                    <div class="payment__send-row">
+                                        <p class="payment__send-heading">
+                                            Send Money
+                                        </p>
+                                        <p class="payment__send-price">
+                                            - $600
+                                        </p>
+                                    </div>
+                                    <div class="payment__send-row">
+                                        <p class="payment__send-heading small">
+                                            Airbnb Payment
+                                        </p>
+                                        <p class="payment__send-price small">
+                                            Sep 23
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Income -->
+                            <div class="payment__income">
+                                <div class="payment__income-square">
+                                    <img
+                                        src="./assets/icon/income.svg"
+                                        alt=""
+                                        class="payment__income-img"
+                                    />
+                                </div>
+                                <p class="payment__income-title">Income</p>
+                                <p class="payment__income-price">$1250</p>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="payment__row"></div>
+                </div>
+            </section>
         </main>
         <script>
             document.addEventListener("scroll", function () {
