--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                 <div class="container">
                     <!-- Row 1 -->
                     <div class="payment__row">
+                        <!-- content -->
                         <section class="payment__content">
                             <p class="section__title">Digital Smart Wallet</p>
                             <h2 class="section__heading">
@@ -329,6 +330,7 @@
                                 Get Started
                             </button>
                         </section>
+                        <!-- media -->
                         <div class="payment__media">
                             <figure class="payment__img-wrap">
                                 <img
@@ -483,6 +485,160 @@
                                 Get Started
                             </button>
                         </section>
+                    </div>
+                </div>
+            </section>
+            <!-- Client -->
+            <section class="client">
+                <div class="container">
+                    <!-- Client top -->
+                    <div class="client__top">
+                        <p class="section__title client__top-title">
+                            Our Testimonial
+                        </p>
+                        <h2 class="section__heading">What Clients Says</h2>
+                        <p class="client__top-desc section__desc">
+                            Read what clients says about us and about our online
+                            banking services that may inspire you
+                        </p>
+                    </div>
+                    <div class="client__inner">
+                        <!-- List -->
+                        <div class="client__list">
+                            <!-- Item 1 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-1.png"
+                                        alt="User Avatar"
+                                    />
+
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- Item 2 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-2.png"
+                                        alt="User Avatar"
+                                    />
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- Item 3 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-2.png"
+                                        alt="User Avatar"
+                                    />
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- Item 4 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-2.png"
+                                        alt="User Avatar"
+                                    />
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- Item 5 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-2.png"
+                                        alt="User Avatar"
+                                    />
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- Item 6 -->
+                            <div class="client-item">
+                                <div class="client-item__review">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </div>
+                                <div class="client-item__info">
+                                    <img
+                                        class="client__avatar"
+                                        src="./assets/img/client-avatar-2.png"
+                                        alt="User Avatar"
+                                    />
+                                    <h2 class="client__name">Alastair Cook</h2>
+                                    <p class="client__occupation section__desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Client item order -->
+                        <div class="client-order">
+                            <span class="client-order__item active"></span>
+                            <span class="client-order__item"></span>
+                            <span class="client-order__item"></span>
+                        </div>
                     </div>
                 </div>
             </section>
