--- a/index.html
+++ b/index.html
@@ -642,6 +642,112 @@
                     </div>
                 </div>
             </section>
+            <!-- Blog -->
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__top">
+                        <section class="blog__content">
+                            <p class="section__title">Our Blog</p>
+                            <h2 class="section__heading blog__heading">
+                                Get The Updates
+                            </h2>
+                            <p class="blog__desc">
+                                Read our blog for the regular updates about us
+                                and about our online banking services that may
+                                inspire you
+                            </p>
+                        </section>
+                        <button class="blog__btn btn">Read All</button>
+                    </div>
+                    <!-- List -->
+                    <div class="blog__list">
+                        <!-- Item 1 -->
+                        <section class="blog-item">
+                            <figure class="blog-item__thumb">
+                                <a href=""
+                                    ><img
+                                        src="./assets/img/blog-1.jpg"
+                                        alt=""
+                                        class="blog-item__img"
+                                /></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <p class="blog-item__time">July 03, 2022</p>
+                                <h3>
+                                    <a href="" class="blog-item__heading">
+                                        Online bank is the best and secure way
+                                        to save in the future...
+                                    </a>
+                                </h3>
+                                <a href="" class="blog-item__link">Read Blog</a>
+                            </div>
+                        </section>
+                        <!-- Item 2 -->
+                        <section class="blog-item">
+                            <figure class="blog-item__thumb">
+                                <a href=""
+                                    ><img
+                                        src="./assets/img/blog-2.jpg"
+                                        alt=""
+                                        class="blog-item__img"
+                                /></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <p class="blog-item__time">July 03, 2022</p>
+                                <h3>
+                                    <a href="" class="blog-item__heading">
+                                        Why do you need to open a bank account
+                                        in online..
+                                    </a>
+                                </h3>
+                                <a href="" class="blog-item__link">Read Blog</a>
+                            </div>
+                        </section>
+                        <!-- Item 3 -->
+                        <section class="blog-item">
+                            <figure class="blog-item__thumb">
+                                <a href=""
+                                    ><img
+                                        src="./assets/img/blog-3.jpg"
+                                        alt=""
+                                        class="blog-item__img"
+                                /></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <p class="blog-item__time">July 03, 2022</p>
+                                <h3>
+                                    <a href="" class="blog-item__heading">
+                                        The benefits that we get from credit
+                                        card at anytime...
+                                    </a>
+                                </h3>
+                                <a href="" class="blog-item__link">Read Blog</a>
+                            </div>
+                        </section>
+                        <!-- Item 4 -->
+                        <section class="blog-item">
+                            <figure class="blog-item__thumb">
+                                <a href=""
+                                    ><img
+                                        src="./assets/img/blog-4.jpg"
+                                        alt=""
+                                        class="blog-item__img"
+                                /></a>
+                            </figure>
+                            <div class="blog-item__info">
+                                <p class="blog-item__time">July 03, 2022</p>
+                                <h3>
+                                    <a href="" class="blog-item__heading">
+                                        How to manage your money in online in
+                                        this busy days...
+                                    </a>
+                                </h3>
+                                <a href="" class="blog-item__link">Read Blog</a>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
         </main>
         <script>
             document.addEventListener("scroll", function () {
