--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                         <!-- Item 1 -->
                         <section class="blog-item">
                             <figure class="blog-item__thumb">
-                                <a href=""
+                                <a href="#!"
                                     ><img
                                         src="./assets/img/blog-1.jpg"
                                         alt=""
@@ -674,18 +674,20 @@
                             <div class="blog-item__info">
                                 <p class="blog-item__time">July 03, 2022</p>
                                 <h3>
-                                    <a href="" class="blog-item__heading">
+                                    <a href="#!" class="blog-item__heading">
                                         Online bank is the best and secure way
                                         to save in the future...
                                     </a>
                                 </h3>
-                                <a href="" class="blog-item__link">Read Blog</a>
+                                <a href="#!" class="blog-item__link"
+                                    >Read Blog</a
+                                >
                             </div>
                         </section>
                         <!-- Item 2 -->
                         <section class="blog-item">
                             <figure class="blog-item__thumb">
-                                <a href=""
+                                <a href="#!"
                                     ><img
                                         src="./assets/img/blog-2.jpg"
                                         alt=""
@@ -695,18 +697,20 @@
                             <div class="blog-item__info">
                                 <p class="blog-item__time">July 03, 2022</p>
                                 <h3>
-                                    <a href="" class="blog-item__heading">
+                                    <a href="#!" class="blog-item__heading">
                                         Why do you need to open a bank account
                                         in online..
                                     </a>
                                 </h3>
-                                <a href="" class="blog-item__link">Read Blog</a>
+                                <a href="#!" class="blog-item__link"
+                                    >Read Blog</a
+                                >
                             </div>
                         </section>
                         <!-- Item 3 -->
                         <section class="blog-item">
                             <figure class="blog-item__thumb">
-                                <a href=""
+                                <a href="#!"
                                     ><img
                                         src="./assets/img/blog-3.jpg"
                                         alt=""
@@ -716,18 +720,20 @@
                             <div class="blog-item__info">
                                 <p class="blog-item__time">July 03, 2022</p>
                                 <h3>
-                                    <a href="" class="blog-item__heading">
+                                    <a href="#!" class="blog-item__heading">
                                         The benefits that we get from credit
                                         card at anytime...
                                     </a>
                                 </h3>
-                                <a href="" class="blog-item__link">Read Blog</a>
+                                <a href="#!" class="blog-item__link"
+                                    >Read Blog</a
+                                >
                             </div>
                         </section>
                         <!-- Item 4 -->
                         <section class="blog-item">
                             <figure class="blog-item__thumb">
-                                <a href=""
+                                <a href="#!"
                                     ><img
                                         src="./assets/img/blog-4.jpg"
                                         alt=""
@@ -737,15 +743,70 @@
                             <div class="blog-item__info">
                                 <p class="blog-item__time">July 03, 2022</p>
                                 <h3>
-                                    <a href="" class="blog-item__heading">
+                                    <a href="#!" class="blog-item__heading">
                                         How to manage your money in online in
                                         this busy days...
                                     </a>
                                 </h3>
-                                <a href="" class="blog-item__link">Read Blog</a>
+                                <a href="#!" class="blog-item__link"
+                                    >Read Blog</a
+                                >
                             </div>
                         </section>
                     </div>
+                </div>
+            </section>
+            <!-- Download -->
+            <section class="download">
+                <div class="container download__container">
+                    <section class="download__inner">
+                        <div class="download__top">
+                            <p class="section__title download__title">
+                                Our App
+                            </p>
+                            <h2 class="section__heading download__heading">
+                                Download the Apps
+                            </h2>
+                            <p class="blog__desc download__desc">
+                                Download our mobile apps and get started today
+                                with a special online bank and move faster
+                            </p>
+                        </div>
+                        <div class="download-cta">
+                            <a class="download-cta__link">
+                                <img
+                                    src="./assets/icon/googleplay.svg"
+                                    alt=""
+                                />
+                            </a>
+                            <a class="download-cta__link">
+                                <img
+                                    src="./assets/icon/applestore.svg"
+                                    alt=""
+                                />
+                            </a>
+                        </div>
+                        <img
+                            src="./assets/icon/star20.svg"
+                            alt=""
+                            class="download__decor top-left"
+                        />
+                        <img
+                            src="./assets/icon/star20.svg"
+                            alt=""
+                            class="download__decor top-right"
+                        />
+                        <img
+                            src="./assets/icon/star20.svg"
+                            alt=""
+                            class="download__decor bottom-left"
+                        />
+                        <img
+                            src="./assets/icon/star20.svg"
+                            alt=""
+                            class="download__decor bottom-right"
+                        />
+                    </section>
                 </div>
             </section>
         </main>
